# pyalicevisionlib

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: index.md  pyalicevision_setup.md
scripts/: setup_conda_pyalicevision.sh
src/pyalicevisionlib/: __init__.py  camera.py  image.py  mesh.py  sfmdata.py  utils.py
src/pyalicevisionlib/evaluation/: __init__.py  chamfer.py  cleanup.py  pipeline.py
src/pyalicevisionlib/scripts/: __init__.py  colmap_to_sfmdata.py  contours.py  evaluate.py  idr_to_sfmdata.py  metashape_to_sfmdata.py  rc_to_sfmdata.py  sfmdata_to_colmap.py  sfmdata_to_idr.py  sfmdata_to_metashape.py  sfmdata_to_rc.py  transform.py  visualize.py
src/pyalicevisionlib/visualization/: __init__.py  plot.py
